20_petunia/services/axillaris/deploy/deployment-minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axillaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axillaris
  template:
    metadata:
      labels:
        app: axillaris
    spec:
      containers:
      - name: axillaris
        image: roskenet/axillaris:2.10.0
        ports:
        - name: www
          containerPort: 8080
