20_petunia/services/axillaris/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axillaris
spec:
  selector:
    app: axillaris
  ports:
  - protocol: TCP
    port: 80
    targetPort: www
