20_petunia/services/axillaris/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axillaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axillaris
  template:
    metadata:
      labels:
        app: axillaris
    spec:
      containers:
      - name: axillaris
        image: roskenet/axillaris:2.9.0
        ports:
        - name: www
          containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: axillaris
spec:
  selector:
    app: axillaris
  ports:
  - protocol: TCP
    port: 80
    targetPort: www

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axillaris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "axillaris"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: axillaris
                port:
                  name: www
