20_petunia/services/axillaris/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axillaris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "axillaris"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: axillaris
                port:
                  name: www
